--- a/accueil_projet_de_langue.html
+++ b/accueil_projet_de_langue.html
@@ -279,21 +279,21 @@ git push
                     </div>
                     <div class="amerique-sud-zone">
                         <svg width="100%" height="100%" class="carre">
-                            <a href="fr/ailleurs.html/#amerique_sud_antilles">
+                            <a href="fr/ailleurs.html#amerique_sud_antilles">
                               <rect class="hoverable" x="0" y="0" width="100%" height="100%" />
                             </a>
                         </svg>
                     </div>
                     <div class="philippines-zone">
                         <svg width="100%" height="100%" class="carre">
-                            <a href="fr/ailleurs.html/#philippines">
+                            <a href="fr/ailleurs.html#philippines">
                               <rect class="hoverable" x="0" y="0" width="100%" height="100%" />
                             </a>
                         </svg>
                     </div>
                     <div class="senegal-zone">
                         <svg width="100%" height="100%" class="carre">
-                            <a href="fr/ailleurs.html/#senegal">
+                            <a href="fr/ailleurs.html#senegal">
                               <rect class="hoverable" x="0" y="0" width="100%" height="100%" />
                             </a>
                         </svg>
