--- a/fr/europe.html
+++ b/fr/europe.html
@@ -13,7 +13,7 @@
         <meta name="description" content="Projet scolaire à propos de la guerre de Sept Ans. Présentation intéractive du conflit en Europe, en Amérique du Nord et dans le sous-continent inden ; site en français, anglais, espagnol et allemand."> <!-- Description apparaissant sur le moteur de recherche -->
         <script src="../JS/script.js"></script>
     </head>
-    <body id="page_home">
+    <body id="page_europe">
 
         <!--Menu en tête de site-->
 
