--- a/en/home_page.html
+++ b/en/home_page.html
@@ -270,21 +270,21 @@
                     </div>
                     <div class="amerique-sud-zone">
                         <svg width="100%" height="100%" class="carre">
-                            <a href="elsewhere.html/#amerique_sud_antilles">
+                            <a href="elsewhere.html#amerique_sud_antilles">
                               <rect class="hoverable" x="0" y="0" width="100%" height="100%" />
                             </a>
                         </svg>
                     </div>
                     <div class="philippines-zone">
                         <svg width="100%" height="100%" class="carre">
-                            <a href="elsewhere.html/#philippines">
+                            <a href="elsewhere.html#philippines">
                               <rect class="hoverable" x="0" y="0" width="100%" height="100%" />
                             </a>
                         </svg>
                     </div>
                     <div class="senegal-zone">
                         <svg width="100%" height="100%" class="carre">
-                            <a href="elsewhere.html/#senegal">
+                            <a href="elsewhere.html#senegal">
                               <rect class="hoverable" x="0" y="0" width="100%" height="100%" />
                             </a>
                         </svg>
